syncing with remotes...

--- a/interval_entropy.ipynb
+++ b/interval_entropy.ipynb
@@ -145,6 +145,8 @@
     "    #  so we could get around that by interpolating, say to N' = 10*N, or something like that. that would extract\n",
     "    #  the shape of the distribution. generally, it looks like there is always some sort of subjective bias in\n",
     "    #  entropy...\n",
+    "    #  The equivalent of this is width-weighted aggretation, so P = (P_k * \\Delta x)/\\Delta X . Note this is \n",
+    "    #   equivalent to interpolating a bunch of points between (x_1, x_2). \n",
     "    #Ps = T\n",
     "    pass"
    ]
@@ -156,7 +158,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
